fix(manager-api-beans): set safer default behaviour to cover locale edge-cases